--- a/todo
+++ b/todo
@@ -1,3 +1,1 @@
-- Implement comment section under stories
-    - create collection "comments" with relational field to story
-    - columns: comment, date, published
+- during flyto to marker thumbnail the user should already see the thumbnails popping up not only at the end after a waiting time
